apps/mealie/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-frontend
  labels:
    app.kubernetes.io/name: mealie
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: mealie
          image: "hkotel/mealie:frontend-v1.0.0beta-5"
            # securityContext:
            #   runAsUser: 1000
            #   runAsGroup: 1000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "828Mi"
              cpu: "1000m"
          imagePullPolicy: IfNotPresent
          ports:
            - name: frontend-http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: database
              mountPath: /app/data
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: mealie-sqlite
