apps/mealie/frontend/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-frontend
  labels:
    app.kubernetes.io/name: mealie
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: frontend-http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: mealie
